--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "pusher-js": "^7.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.12.1",
     "react-scripts": "4.0.3",
