--- a/.env
+++ b/.env
@@ -8,3 +8,4 @@ REACT_APP_STORAGEBUCKET = chat2youme.appspot.com
 REACT_APP_MESSAGINGSENDERID = 305911353137
 REACT_APP_APPID = 1:305911353137:web:d90222f67a0a53c5d22a10
 REACT_APP_MEASUREMENTID = G-RP17VHXW5X
+REACT_APP_BASEURL = http://13.200.64.48:8080/v1/app/
